tests/NormalTests/paczka1/fuzzy1/74203833.err
Error in line 1: XU8Z S987 95,2
Error in line 16: S987 S88 54,4
Error in line 24: XU8Z S987 7,48
Error in line 32: onB4Q20l0c S987 258,56
Error in line 25: XU8Z S987 28,0
Error in line 36: XU8Z A627 63,7
Error in line 40: d1t8M5fEuW S987 95,53
